<resources>
    <string name="app_name">Assistance Finder</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">List view</string>
    <string name="title_activity_register">register</string>
    <string name="Welcome">WELCOME</string>
    <string name="username">username</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <string name="EmailAddress">Email Address</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="REGISTRATION">REGISTRATION</string>
    <string name="PlaceName">Fuel Station Name</string>
    <string name="Address">Address</string>
    <string name="OpeningHrs">Opening Hours</string>
    <string name="Form">Please Fill Location Details Here.</string>
    <string name="StationName">Service Station Name</string>
    <string name="roadsideServiceName">Roadside Assistance Name</string>
    <string name="HospitalName">Hospital Name</string>
    <string name="TagNewLocation">Tag New Location</string>
    <string name="TypeOfService">What type of service your place have? Select one.</string>
    <string name="service_station">SERVICE STATION</string>
    <string name="address">Address</string>
    <string name="dialog_address">Address</string>
    <string name="dialog_OpeningHrs">Opening Hours</string>
    <string name="unit_house_number">Unit/House Number.</string>
    <string name="street_name">Street Name.</string>
    <string name="suburb_name">Suburb Name.</string>
    <string name="post_code">Post Code</string>
    <string name="state">State.</string>
    <string name="save">SAVE</string>
    <string name="HouseErrMsg">House Number is required</string>
    <string name="StreetErrMsg">Street Name is required</string>
    <string name="SuburbErrMsg">Suburb Name is required</string>
    <string name="PostcodeErrMsg">Post Code is required</string>
    <string name="StateErrMsg">State Name is required</string>
    <string name="Ok">OK</string>

    <string name="WDamOpeningErrMsg">Weekdays Opening time is required</string>
    <string name="WDpmClosingErrMsg">Weekdays Closing time is required</string>
    <string name="WEamOpeningErrMsg">WeekEnds Opening time is required</string>
    <string name="WEamClosingErrMsg">WeekEnds Closing time is required</string>

    <string-array name="am_pm">
        <item>AM</item>
        <item>PM</item>
    </string-array>


    <string-array name="services">
        <item>SERVICES</item>
        <item>Pick-up</item>

    </string-array>
    Service>


    <string name="CarModels_btn">Car models you fix</string>
    <string name="dialog_title">Select car models you can service.</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
    <string name="start">start</string>
    <string name="next">next</string>

    <string-array name="Model_name">
        <item>Toyota</item>
        <item>Hyundai</item>
        <item>Holdan</item>
        <item>Ford</item>
        <item>Mazda</item>
        <item>Audi</item>
        <item>BMW</item>
        <item>Mercedes</item>
        <item>Honda</item>
        <item>Suzuki</item>
    </string-array>


        <string name="A">Intro Slider</string>
        <string name="title_activity_welcome">Assistance Finder</string>

        <string name="skip">SKIP</string>


        <string name="slide_1_title">Find service or fuel stations.</string>
        <string name="slide_1_desc">The easiest way to find service or fuel stations around you.</string>

        <string name="slide_2_title">Need pick-up or roadside assistance!</string>
        <string name="slide_2_desc">Find help here, if your vehicle broke down.</string>

        <string name="slide_3_title">Emergency!</string>
        <string name="slide_3_desc">Look for hospitals around you and make hospital call.</string>

        <string name="slide_4_title">Tag your services.</string>
        <string name="slide_4_desc">Just register and add your own services and show on maps for others!</string>

        <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
        <string name="play_again">Play Again</string>


</resources>
