<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_address"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_margin="7dp"
        />

    <EditText
        android:id="@+id/HouseNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:hint="@string/unit_house_number"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/Street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/street_name"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/Suburb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:hint="@string/suburb_name"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/Postcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/post_code"
        android:inputType="number" />

    <EditText
        android:id="@+id/State"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:hint="@string/state"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/Address_save"
        android:layout_width="213dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/Ok" />

</LinearLayout>
</ScrollView>