<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#ffffff"
    tools:context="com.DesignQuads.AssistanceFinder.RoadSideAddress">

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"

        android:orientation="vertical"
        android:background="#80aaff">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Form"
            android:textColor="#ffffff"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="8dp"
            android:textSize="24sp" />
    </LinearLayout>



    <EditText
        android:id="@+id/edit_PlaceName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:ems="10"
        android:hint="@string/roadsideServiceName"
        android:inputType="textPersonName"
        android:textColor="#001a00"
        android:layout_marginTop="90dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />




    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PhoneNumber"
        android:textColor="#001a00"
        android:inputType="phone"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="0dp"/>


    <Button
        android:id="@+id/Address_btn"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/common_full_open_on_phone"
        android:elevation="0dp"
        android:text="@string/address"
        android:textStyle="normal"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/OpeningHrs_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="230dp"
        android:textSize="18sp"
        android:background="@drawable/common_full_open_on_phone"
        android:text="Opening Hours"
        android:textStyle="normal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="290dp">



           <Spinner
               android:id="@+id/Road_spinner"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:entries="@array/services"
               />

        </LinearLayout>

    <Button
        android:id="@+id/Submit_btn"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="SUBMIT FORM" />


</RelativeLayout>
