<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#ffffff"
    tools:context="com.DesignQuads.AssistanceFinder.ServiceAddress">

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"

        android:orientation="vertical"
        android:background="#80aaff">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Form"
            android:textColor="#ffffff"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="8dp"
            android:textSize="24sp" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">
    <EditText
        android:id="@+id/edit_PlaceName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/StationName"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>


    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PhoneNumber"
        android:inputType="phone"
        android:layout_below="@+id/edit_PlaceName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />


    <Button
        android:id="@+id/Address_btn"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/common_full_open_on_phone"
        android:elevation="0dp"
        android:text="@string/address"
        android:textStyle="normal"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/edit_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/OpeningHrs_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:background="@drawable/common_full_open_on_phone"
        android:text="Opening Hours"
        android:textStyle="normal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/Address_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/CarModels_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:background="@drawable/common_full_open_on_phone"
        android:text="Car models you fix."
        android:textStyle="normal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/OpeningHrs_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:entries="@array/Model_name"/>
    </RelativeLayout>

    <Button
        android:id="@+id/Submit_btn"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="SUBMIT FORM" />


</RelativeLayout>
